# zero2prod

./: .gitignore  Cargo.toml  README.md  email=thomas_mann@hotmail.com&name=Tom
migrations/: 20220320111735_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  new_route.rs
