[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name =  "zero2prod"

[dependencies]
actix-web = "4.0.0"
reqwest = "0.11.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9"
tracing = { version = "0.1", features = ["log"] }
log = "0.4"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
